tweak web interface

--- a/404.md
+++ b/404.md
@@ -1,5 +1,11 @@
 ---
 layout: page
-title: 404
+title: Error - 404
 ---
-Page not found, keep calm and love Marit!
+**Page not found, keep calm and love Marit!**
+
+<a href="http://instagram.com/p/atEUz6wn2K/" target="_blank"><img src="/images/marit-larsen.jpg" width="400px" /></a>
+
+And you will be **redirected** to [Home](/).
+
+please click [HERE](/), if the redictrection doesn't work which possibly caused by your stare at the beautiful face below.
