--- a/404.md
+++ b/404.md
@@ -4,7 +4,9 @@ title: Error - 404
 ---
 **Page not found, keep calm and love Marit!**
 
+<div class="float">
 <a href="http://instagram.com/p/atEUz6wn2K/" target="_blank"><img src="/images/marit-larsen.jpg" width="400px" /></a>
+</div>
 
 And you will be **redirected** to [Home](/).
 
