--- a/404.md
+++ b/404.md
@@ -11,3 +11,5 @@ title: Error - 404
 And you will be **redirected** to [Home](/).
 
 please click [HERE](/), if the redictrection doesn't work which possibly caused by your stare at the beautiful face below.
+
+<div class="clean"></div>
