--- a/_posts/2006-03-06-To-An-End.md
+++ b/_posts/2006-03-06-To-An-End.md
@@ -2,84 +2,121 @@
 layout: post
 title:  "To An End (Feat. Thom Hell)"
 categories: Under-the-Surface
+songid: 3026495
 ---
-A dream in a jar
-
-A memory scar
-
-Though trapped in a frame
-
-Not one day the same
-
-I fell and I weep
-
-’til I’m too tired to sleep
-
-And I ask permission to land
-
-To strike up the band
+A dream in a jar
 
 
-Yet I’ll build and I’ll sow
-
-I’ll watch ’til it grows
-
-And I will take the chance
-
-There’ll be no last dance
+A memory scar
 
 
-No when it arrives
-
-The darkest of nights
-
-Let me have my back turned
-
-And not realise
+Though trapped in a frame
 
 
-The story’s coming to an end
+Not one day the same
 
-I’ll never be just giving in
 
-I’m living by the rolling dice
+I fell and I weep
 
-It’s closure but it’s in disguise
+
+’til I’m too tired to sleep
+
+
+And I ask permission to land
+
+
+To strike up the band
 
 
 
-I try and I try (I will try so hard)
+Yet I’ll build and I’ll sow
 
-I’ll play with the fire (I circle around the fire because)
 
-It goes unexplained (it goes unexplained)
+I’ll watch ’til it grows
 
-I’m still in the game (I’m still in the game)
 
-I’m scared to the bone (I’m scared to the bone)
+And I will take the chance
 
-I’m sitting at home (I’m sitting at home)
 
-I prepared on the day (will bet on the day)
-
-They’re ready for me
+There’ll be no last dance
 
 
 
-No when it arrives
-
-The brightest of lights
-
-Let me have my back turned
-
-And not realise
+No when it arrives
 
 
+The darkest of nights
 
-The story’s coming to an end
 
-I’ll never be just giving in
+Let me have my back turned
 
-I’m living by the rolling dice
 
-It’s closure but it sure feels nice
+And not realise
+
+
+
+The story’s coming to an end
+
+
+I’ll never be just giving in
+
+
+I’m living by the rolling dice
+
+
+It’s closure but it’s in disguise
+
+
+
+
+I try and I try (I will try so hard)
+
+
+I’ll play with the fire (I circle around the fire because)
+
+
+It goes unexplained (it goes unexplained)
+
+
+I’m still in the game (I’m still in the game)
+
+
+I’m scared to the bone (I’m scared to the bone)
+
+
+I’m sitting at home (I’m sitting at home)
+
+
+I prepared on the day (will bet on the day)
+
+
+They’re ready for me
+
+
+
+
+No when it arrives
+
+
+The brightest of lights
+
+
+Let me have my back turned
+
+
+And not realise
+
+
+
+
+The story’s coming to an end
+
+
+I’ll never be just giving in
+
+
+I’m living by the rolling dice
+
+
+It’s closure but it sure feels nice
+
